// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toggle Withdraw Rai components > renders disable withdraw rai correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="max-w-screen-xl mx-auto px-4 lg:px-8"
      >
        <nav
          aria-label="breadcrumbs for spa or waiver choices"
          class="my-4"
          role="navigation"
        >
          <ul
            class="flex flex-wrap gap-1"
          >
            <li
              class="flex items-center text-sm"
            >
              <a
                class="underline text-sky-700 hover:text-sky-800"
                data-discover="true"
                href="/dashboard?tab=waivers"
              >
                Dashboard
              </a>
            </li>
            <li
              class="flex items-center text-sm"
            >
              <span>
                <svg
                  class="w-5 h-5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </span>
              <a
                class="underline text-sky-700 hover:text-sky-800"
                data-discover="true"
                href="/details/1915(b)/VA-2234.R11.02"
              >
                VA-2234.R11.02
              </a>
            </li>
            <li
              class="flex items-center text-sm"
            >
              <span>
                <svg
                  class="w-5 h-5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </span>
              <span
                aria-disabled="true"
                class="whitespace-nowrap"
              >
                Enable Formal RAI Response Withdraw
              </span>
            </li>
          </ul>
        </nav>
        <form
          class="my-6 space-y-8 mx-auto justify-center flex flex-col"
        >
          <section
            class="p-4 border rounded-sm border-cardBorder"
            data-testid="detail-section"
          >
            <h1
              class="text-3xl font-semibold mb-2"
              data-testid="detail-section-title"
            >
              Enable Formal RAI Response Withdraw Details
            </h1>
            <hr
              class="my-6 bg-slate-200"
            />
            <div
              class="gap-8 flex flex-col"
              data-testid="detail-section-child"
            >
              <div>
                <div
                  class="mt-4"
                >
                  Once you submit this form, the most recent Formal RAI Response for this package will be able to be withdrawn by the state
                </div>
              </div>
              <section
                class="flex flex-col mb-8 space-y-8"
              >
                <div>
                  <p
                    class="font-bold"
                  >
                    Waiver Number
                  </p>
                  <p
                    class="text-xl"
                  >
                    VA-2234.R11.02
                  </p>
                </div>
                <div>
                  <p
                    class="font-bold"
                  >
                    Authority
                  </p>
                  <p
                    class="text-xl"
                  >
                    1915(b) Waiver
                  </p>
                </div>
              </section>
            </div>
          </section>
          <section
            class="flex justify-end gap-2 p-4 ml-auto"
          >
            <button
              class="inline-flex items-center justify-center rounded-md text-[16px] font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-slate-50 hover:bg-primary-dark h-10 py-2 px-12"
              data-testid="submit-action-form"
              disabled=""
              type="submit"
            >
              Submit
            </button>
            <button
              class="inline-flex items-center justify-center rounded-md text-[16px] ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-primary text-primary font-bold hover:bg-primary/10 h-10 py-2 px-12"
              data-testid="cancel-action-form"
              type="reset"
            >
              Cancel
            </button>
          </section>
        </form>
        <div
          class="relative w-full border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground border-l-[6px] border-y-0 border-r-0 border-cyan-500 bg-cyan-300/10 rounded-none mb-8 items-center flex py-8 px-14 flex-row text-sm justify-center gap-24"
          role="alert"
        >
          <p
            class="text-lg"
          >
            Do you have questions or need support?
          </p>
          <a
            data-discover="true"
            href="/faq"
            target="_blank"
          >
            <button
              class="inline-flex items-center justify-center text-[16px] font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-slate-50 hover:bg-primary-dark h-11 rounded-md px-8 mx-4"
            >
              View FAQ
            </button>
          </a>
        </div>
      </div>
      ,
    </div>
  </body>,
  "container": <div>
    <div
      class="max-w-screen-xl mx-auto px-4 lg:px-8"
    >
      <nav
        aria-label="breadcrumbs for spa or waiver choices"
        class="my-4"
        role="navigation"
      >
        <ul
          class="flex flex-wrap gap-1"
        >
          <li
            class="flex items-center text-sm"
          >
            <a
              class="underline text-sky-700 hover:text-sky-800"
              data-discover="true"
              href="/dashboard?tab=waivers"
            >
              Dashboard
            </a>
          </li>
          <li
            class="flex items-center text-sm"
          >
            <span>
              <svg
                class="w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9 18 6-6-6-6"
                />
              </svg>
            </span>
            <a
              class="underline text-sky-700 hover:text-sky-800"
              data-discover="true"
              href="/details/1915(b)/VA-2234.R11.02"
            >
              VA-2234.R11.02
            </a>
          </li>
          <li
            class="flex items-center text-sm"
          >
            <span>
              <svg
                class="w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9 18 6-6-6-6"
                />
              </svg>
            </span>
            <span
              aria-disabled="true"
              class="whitespace-nowrap"
            >
              Enable Formal RAI Response Withdraw
            </span>
          </li>
        </ul>
      </nav>
      <form
        class="my-6 space-y-8 mx-auto justify-center flex flex-col"
      >
        <section
          class="p-4 border rounded-sm border-cardBorder"
          data-testid="detail-section"
        >
          <h1
            class="text-3xl font-semibold mb-2"
            data-testid="detail-section-title"
          >
            Enable Formal RAI Response Withdraw Details
          </h1>
          <hr
            class="my-6 bg-slate-200"
          />
          <div
            class="gap-8 flex flex-col"
            data-testid="detail-section-child"
          >
            <div>
              <div
                class="mt-4"
              >
                Once you submit this form, the most recent Formal RAI Response for this package will be able to be withdrawn by the state
              </div>
            </div>
            <section
              class="flex flex-col mb-8 space-y-8"
            >
              <div>
                <p
                  class="font-bold"
                >
                  Waiver Number
                </p>
                <p
                  class="text-xl"
                >
                  VA-2234.R11.02
                </p>
              </div>
              <div>
                <p
                  class="font-bold"
                >
                  Authority
                </p>
                <p
                  class="text-xl"
                >
                  1915(b) Waiver
                </p>
              </div>
            </section>
          </div>
        </section>
        <section
          class="flex justify-end gap-2 p-4 ml-auto"
        >
          <button
            class="inline-flex items-center justify-center rounded-md text-[16px] font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-slate-50 hover:bg-primary-dark h-10 py-2 px-12"
            data-testid="submit-action-form"
            disabled=""
            type="submit"
          >
            Submit
          </button>
          <button
            class="inline-flex items-center justify-center rounded-md text-[16px] ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-primary text-primary font-bold hover:bg-primary/10 h-10 py-2 px-12"
            data-testid="cancel-action-form"
            type="reset"
          >
            Cancel
          </button>
        </section>
      </form>
      <div
        class="relative w-full border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground border-l-[6px] border-y-0 border-r-0 border-cyan-500 bg-cyan-300/10 rounded-none mb-8 items-center flex py-8 px-14 flex-row text-sm justify-center gap-24"
        role="alert"
      >
        <p
          class="text-lg"
        >
          Do you have questions or need support?
        </p>
        <a
          data-discover="true"
          href="/faq"
          target="_blank"
        >
          <button
            class="inline-flex items-center justify-center text-[16px] font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-slate-50 hover:bg-primary-dark h-11 rounded-md px-8 mx-4"
          >
            View FAQ
          </button>
        </a>
      </div>
    </div>
    ,
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Toggle Withdraw Rai components > renders disable withdraw rai correctly 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="max-w-screen-xl mx-auto px-4 lg:px-8"
      >
        <nav
          aria-label="breadcrumbs for spa or waiver choices"
          class="my-4"
          role="navigation"
        >
          <ul
            class="flex flex-wrap gap-1"
          >
            <li
              class="flex items-center text-sm"
            >
              <a
                class="underline text-sky-700 hover:text-sky-800"
                data-discover="true"
                href="/dashboard?tab=waivers"
              >
                Dashboard
              </a>
            </li>
            <li
              class="flex items-center text-sm"
            >
              <span>
                <svg
                  class="w-5 h-5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </span>
              <a
                class="underline text-sky-700 hover:text-sky-800"
                data-discover="true"
                href="/details/1915(b)/VA-2234.R11.02"
              >
                VA-2234.R11.02
              </a>
            </li>
            <li
              class="flex items-center text-sm"
            >
              <span>
                <svg
                  class="w-5 h-5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </span>
              <span
                aria-disabled="true"
                class="whitespace-nowrap"
              >
                Disable Formal RAI Response Withdraw
              </span>
            </li>
          </ul>
        </nav>
        <form
          class="my-6 space-y-8 mx-auto justify-center flex flex-col"
        >
          <section
            class="p-4 border rounded-sm border-cardBorder"
            data-testid="detail-section"
          >
            <h1
              class="text-3xl font-semibold mb-2"
              data-testid="detail-section-title"
            >
              Disable Formal RAI Response Withdraw Details
            </h1>
            <hr
              class="my-6 bg-slate-200"
            />
            <div
              class="gap-8 flex flex-col"
              data-testid="detail-section-child"
            >
              <div>
                <div
                  class="mt-4"
                >
                  The state will not be able to withdraw its RAI response. It may take up to a minute for this change to be applied.
                </div>
              </div>
              <section
                class="flex flex-col mb-8 space-y-8"
              >
                <div>
                  <p
                    class="font-bold"
                  >
                    Waiver Number
                  </p>
                  <p
                    class="text-xl"
                  >
                    VA-2234.R11.02
                  </p>
                </div>
                <div>
                  <p
                    class="font-bold"
                  >
                    Authority
                  </p>
                  <p
                    class="text-xl"
                  >
                    1915(b) Waiver
                  </p>
                </div>
              </section>
            </div>
          </section>
          <section
            class="flex justify-end gap-2 p-4 ml-auto"
          >
            <button
              class="inline-flex items-center justify-center rounded-md text-[16px] font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-slate-50 hover:bg-primary-dark h-10 py-2 px-12"
              data-testid="submit-action-form"
              disabled=""
              type="submit"
            >
              Submit
            </button>
            <button
              class="inline-flex items-center justify-center rounded-md text-[16px] ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-primary text-primary font-bold hover:bg-primary/10 h-10 py-2 px-12"
              data-testid="cancel-action-form"
              type="reset"
            >
              Cancel
            </button>
          </section>
        </form>
        <div
          class="relative w-full border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground border-l-[6px] border-y-0 border-r-0 border-cyan-500 bg-cyan-300/10 rounded-none mb-8 items-center flex py-8 px-14 flex-row text-sm justify-center gap-24"
          role="alert"
        >
          <p
            class="text-lg"
          >
            Do you have questions or need support?
          </p>
          <a
            data-discover="true"
            href="/faq"
            target="_blank"
          >
            <button
              class="inline-flex items-center justify-center text-[16px] font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-slate-50 hover:bg-primary-dark h-11 rounded-md px-8 mx-4"
            >
              View FAQ
            </button>
          </a>
        </div>
      </div>
      ,
    </div>
  </body>,
  "container": <div>
    <div
      class="max-w-screen-xl mx-auto px-4 lg:px-8"
    >
      <nav
        aria-label="breadcrumbs for spa or waiver choices"
        class="my-4"
        role="navigation"
      >
        <ul
          class="flex flex-wrap gap-1"
        >
          <li
            class="flex items-center text-sm"
          >
            <a
              class="underline text-sky-700 hover:text-sky-800"
              data-discover="true"
              href="/dashboard?tab=waivers"
            >
              Dashboard
            </a>
          </li>
          <li
            class="flex items-center text-sm"
          >
            <span>
              <svg
                class="w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9 18 6-6-6-6"
                />
              </svg>
            </span>
            <a
              class="underline text-sky-700 hover:text-sky-800"
              data-discover="true"
              href="/details/1915(b)/VA-2234.R11.02"
            >
              VA-2234.R11.02
            </a>
          </li>
          <li
            class="flex items-center text-sm"
          >
            <span>
              <svg
                class="w-5 h-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9 18 6-6-6-6"
                />
              </svg>
            </span>
            <span
              aria-disabled="true"
              class="whitespace-nowrap"
            >
              Disable Formal RAI Response Withdraw
            </span>
          </li>
        </ul>
      </nav>
      <form
        class="my-6 space-y-8 mx-auto justify-center flex flex-col"
      >
        <section
          class="p-4 border rounded-sm border-cardBorder"
          data-testid="detail-section"
        >
          <h1
            class="text-3xl font-semibold mb-2"
            data-testid="detail-section-title"
          >
            Disable Formal RAI Response Withdraw Details
          </h1>
          <hr
            class="my-6 bg-slate-200"
          />
          <div
            class="gap-8 flex flex-col"
            data-testid="detail-section-child"
          >
            <div>
              <div
                class="mt-4"
              >
                The state will not be able to withdraw its RAI response. It may take up to a minute for this change to be applied.
              </div>
            </div>
            <section
              class="flex flex-col mb-8 space-y-8"
            >
              <div>
                <p
                  class="font-bold"
                >
                  Waiver Number
                </p>
                <p
                  class="text-xl"
                >
                  VA-2234.R11.02
                </p>
              </div>
              <div>
                <p
                  class="font-bold"
                >
                  Authority
                </p>
                <p
                  class="text-xl"
                >
                  1915(b) Waiver
                </p>
              </div>
            </section>
          </div>
        </section>
        <section
          class="flex justify-end gap-2 p-4 ml-auto"
        >
          <button
            class="inline-flex items-center justify-center rounded-md text-[16px] font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-slate-50 hover:bg-primary-dark h-10 py-2 px-12"
            data-testid="submit-action-form"
            disabled=""
            type="submit"
          >
            Submit
          </button>
          <button
            class="inline-flex items-center justify-center rounded-md text-[16px] ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-primary text-primary font-bold hover:bg-primary/10 h-10 py-2 px-12"
            data-testid="cancel-action-form"
            type="reset"
          >
            Cancel
          </button>
        </section>
      </form>
      <div
        class="relative w-full border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground border-l-[6px] border-y-0 border-r-0 border-cyan-500 bg-cyan-300/10 rounded-none mb-8 items-center flex py-8 px-14 flex-row text-sm justify-center gap-24"
        role="alert"
      >
        <p
          class="text-lg"
        >
          Do you have questions or need support?
        </p>
        <a
          data-discover="true"
          href="/faq"
          target="_blank"
        >
          <button
            class="inline-flex items-center justify-center text-[16px] font-bold ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-slate-50 hover:bg-primary-dark h-11 rounded-md px-8 mx-4"
          >
            View FAQ
          </button>
        </a>
      </div>
    </div>
    ,
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
